tests/build/widget_macro/fail/module_path_malformed3.rs
use zero_ui::core::widget2;

// doesn't start with $crate
#[widget2($self::widget)]
pub mod widget {}

fn main() {}
